--- a/index.html
+++ b/index.html
@@ -9,19 +9,67 @@
     <link rel="stylesheet" href="./css/timeline.css">
     <link rel="stylesheet" href="./css/programcards.css">
     <link rel="stylesheet" href="./css/skillcards.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./js/timeline.js"></script>
+
 </head>
 
 <body>
-    <section class="navbar">
-        <div class="home_item fixed hidden md:flex w-full mx-auto flex justify-evenly">
-            <div class=" hover:text-amber-500 w-1/4 text-center py-4 cursor-pointer duration-150">首頁</div>
-            <div class=" hover:text-amber-500 w-1/4 text-center py-4 cursor-pointer duration-150">前後端架構</div>
-            <div class=" hover:text-amber-500 w-1/4 text-center py-4 cursor-pointer duration-150">課程介紹</div>
-            <div class=" hover:text-amber-500 w-1/4 text-center py-4 cursor-pointer duration-150">聯繫我們</div>
+    <nav class="bg-white shadow-lg">
+        <div class="max-w-6xl mx-auto px-4">
+            <div class="flex justify-between">
+                <div class="flex space-x-7">
+                    <div>
+                        <!-- 網站 logo -->
+                        <a href="#" class="flex items-center py-4 px-2">
+                            <span class="font-semibold text-gray-500 text-lg">您的 Logo</span>
+                        </a>
+                    </div>
+                    <!-- 主導航菜單 -->
+                    <div class="hidden md:flex items-center space-x-1">
+                        <a href="#"
+                            class="py-4 px-2 text-gray-500 font-semibold hover:text-amber-500 transition duration-300 border-b-2 border-transparent hover:border-amber-500">首頁</a>
+                        <a href="#"
+                            class="py-4 px-2 text-gray-500 font-semibold hover:text-amber-500 transition duration-300 border-b-2 border-transparent hover:border-amber-500">前後端架構</a>
+                        <a href="#"
+                            class="py-4 px-2 text-gray-500 font-semibold hover:text-amber-500 transition duration-300 border-b-2 border-transparent hover:border-amber-500">課程介紹</a>
+                        <a href="#"
+                            class="py-4 px-2 text-gray-500 font-semibold hover:text-amber-500 transition duration-300 border-b-2 border-transparent hover:border-amber-500">聯繫我們</a>
+                    </div>
+                </div>
+                <!-- 次要導航菜單 -->
+                <div class="hidden md:flex items-center space-x-3 ">
+                    <a href="#"
+                        class="py-2 px-2 font-medium text-gray-500 rounded hover:bg-amber-500 hover:text-white transition duration-300">登錄</a>
+                    <a href="#"
+                        class="py-2 px-2 font-medium text-white bg-amber-500 rounded hover:bg-amber-400 transition duration-300">註冊</a>
+                </div>
+                <!-- 移動設備菜單按鈕 -->
+                <div class="md:hidden flex items-center">
+                    <button class="outline-none mobile-menu-button">
+                        <svg class="w-6 h-6 text-gray-500 hover:text-amber-500" x-show="!showMenu" fill="none"
+                            stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path d="M4 6h16M4 12h16M4 18h16"></path>
+                        </svg>
+                    </button>
+                </div>
+            </div>
         </div>
-    </section>
+        <!-- 移動設備菜單 -->
+        <div class="hidden mobile-menu">
+            <ul class="">
+                <li class="active"><a href="#"
+                        class="block text-sm px-2 py-4 text-white bg-amber-500 font-semibold">首頁</a></li>
+                <li><a href="#" class="block text-sm px-2 py-4 hover:bg-amber-500 transition duration-300">前後端架構</a>
+                </li>
+                <li><a href="#" class="block text-sm px-2 py-4 hover:bg-amber-500 transition duration-300">課程介紹</a></li>
+                <li><a href="#" class="block text-sm px-2 py-4 hover:bg-amber-500 transition duration-300">聯繫我們</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <section style="padding-top:50px;padding-bottom: 50px;">
         <div class="timeline-container">
             <div class="timeline" id="timeline">
@@ -177,6 +225,14 @@
 <script>
 
     document.addEventListener("DOMContentLoaded", function () {
+        const btn = document.querySelector("button.mobile-menu-button");
+        const menu = document.querySelector(".mobile-menu");
+
+        // add event listeners
+        btn.addEventListener("click", () => {
+            menu.classList.toggle("hidden");
+        });
+
         InitTimeline();
     });
 
