目前最新版本，可以完整連到nginx+servrer load balancer

--- a/index.html
+++ b/index.html
@@ -221,6 +221,12 @@
         </div>
 
     </section>
+    <section class="system progress">
+        <div>
+
+        </div>
+
+    </section>
 
 
 
